# RAG

./: .gitignore  README.md  pyproject.toml
DOCS/novels/: 1.txt  3.txt  4.txt  5.txt  5_splitted_easily.txt  6.txt  7.txt
DOCS/user_result/: score_result.csv
conf/: config.yml
data/: experiments.csv  truth_answer.csv
data/backup/: predictions_01.csv  predictions_02_source_suck.csv  predictions_03_unshorten.csv
data/responses/: score_result_03_shorten.csv
data/results/: result_01.csv  result_03_shorten.csv
src/: compare_my_results_and_truth_ansers.py  create_results.py  create_submit.py  create_vectorstore.py  restore_vectorstore.py  retouch_submissions.py  update_truth_ansers.py  utils.py
src/_graphrag/: confirm_final_documents.py  confirm_final_entities.py  keywords_chain.py  playground.py  relationships.py  visualizer.py
src/modules/: chat_models.py  db.py  document_processing.py  query.py
src/prompts/: base_prompt.py  chunker_prompt.py  extract_keywords_prompt.py  summarize_prompt.py
submit/: predictions.csv
