[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "langchain>=0.3.0",
    "yml>=0.0.1",
    "langchain-community>=0.3.0",
    "openai>=1.47.1",
    "langchain-openai>=0.2.0",
    "chromadb>=0.5.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rag"]
