[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "langchain>=0.3.0",
    "yml>=0.0.1",
    "langchain-community>=0.3.0",
    "openai>=1.47.1",
    "langchain-openai>=0.2.0",
    "chromadb>=0.5.7",
    "langchain-anthropic>=0.2.1",
    "langchain-chroma>=0.1.4",
    "pyarrow>=17.0.0",
    "pandas>=2.2.3",
    "networkx>=3.3",
    "matplotlib>=3.9.2",
    "scipy>=1.14.1",
    "japanize-matplotlib>=1.1.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rag"]
